Legend:

[+] New/improved feature 
[B] Bug fixed
[K] Known issue
[O] Other

Change log
==========

v0.4-devel 

TODO: add pipeline changes

[+][common] Added a new frame class for L2TPv3 (RFC3931): fl2tpv3frame to rofl/common/protocols
[+][common] Added a new logging concept in rofl/common/logging.h: 8 output streams exist
    for levels emerg, alert, crit, error, warn, info, notice, debug whose
    destinations can be freely configured
[B][common] Fixed a bug in handling of OXM TLVs of type VLAN_VID
[+][common] Added namespaces for OFP versions 1.0, 1.2, 1.3
[+][common] Revised workflow and split of crofdpt_impl and crofctl_impl
[+][common] New logging subsystem
[B][common] Fixed a bug in reverse mapping of pipeline matches to OXM-TLVs
[+][common] Reimplementation of main io loop in ciosrv
    - semantics of timer support haven changed
    - each timer is referred to by a uint32_t timer_id assigned by the cioloop IO subsystem
    - canceling or resetting timers must be done using this timer_id, the opaque value cannot
      be used anymore
[+][common] added OF13 support to various statistics classes including support for duration fields

v0.3.4

[+][common] Added LLC basic frame support in fetherframe.h/cc 
[B][common] fixed bug for OF10. Added cofaclist instance (named actions) to avoid use of cofinlist for OF1.0
[B][pipeline] missing _DEPENDENCIES of matching algorithms library added

v0.3.3

[B][pipeline] Fixed race condition on accessing num_of_outputs of a matched entry 
[B][pipeline] Fixed critical bugs related to of1x_modify_flow_entry_loop(): i) improper behaviour according to spec ii) leak when no rules were modified iii) corruption of state when more than one flow was modified

v0.3.2.1

[+] Adding README and CHANGES